deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx-demo
        image: REGISTRY/NAMESPACE/IMAGE:TAG
        ports:
        - containerPort: 5555
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
