service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5555
  selector:
    app: nginx-demo
